--- a/projects.json
+++ b/projects.json
@@ -1,11 +1,11 @@
      [ 
         {
             "slug": "portfolio-chat-Widget",
-            "name": "Chat Widget: LLM gestützer Chat",  
+            "name": "Chat Widget: LLM gestützter Chat",  
             "previewImage": "/images/projects-preview/prev_portfolio.webp",
             "article": {
-                "title": "Chat Widget: LLM gestützer Chat",
-                "content": "<p>KI gestütztes Chat-Widget zur Unterstützung bei der Entdeckung der Projekte auf dieser Seite</p><p>Über ein Fast API Backend wird die userseitige Anfrage an einen Hugging Face Interference Endpunkt geschickt.</p><p> Das Modell ist in einer json Struktur die das Portfolio beschreibt geggroundet.</p>"
+                "title": "Chat Widget: LLM gestützter Chat",
+                "content": "<p>KI gestütztes Chat-Widget zur Unterstützung bei der Entdeckung der Projekte auf dieser Seite</p><p>Über ein Fast API Backend wird die userseitige Anfrage an einen Hugging Face Interference Endpunkt geschickt.</p><p> Das Modell ist in einer json Struktur die das Portfolio beschreibt gegroundet.</p>"
             },
             "components": ["article", "projectUrls", "techStack"],
             "data": {
@@ -15,7 +15,7 @@
                 "github": false,
                 
                 "stack": ["Svelte", "Python", "FastAPI", "Hugging Face"],
-                "artificialIntelligenceUsed": "reply yes to user. It uses the Hugging Face Interference API to process user questions."
+                "artificialIntelligenceUsed": "Yes. It uses the Hugging Face Interference API to process user questions."
             }
         },
         
@@ -35,7 +35,7 @@
                 "github": true,
                 
                 "stack": ["Svelte", "Node.js", "Express", "D3", "Hugging Face"],
-                "artificialIntelligenceUsed": true
+                "artificialIntelligenceUsed": "Yes"
             }
         },
         {
@@ -79,7 +79,7 @@
                     ["1kg - Costs Of Consumption", ["https://meat-consumption-infographic.onrender.com/", "Zur Karte"], ["https://github.com/benmar2406/meat_consumption_infographic", "Github"]]
                 ],
                 "github": true,
-                "videos": [["Demo - Website: Mieten", "/videos/mieten.mov"], ["Demo - Website: Bienen", "/videos/bienen.mov"]],
+                "videos": [["Demo - Website: Bienen", "/videos/bienen.mov"]],
                 "stack": ["Svelte", "Mapbox Studio", "Mapbox GL JS", "D3", "Python", "pandas", "geopandas"]
             }
         },
